CHROMIUM: low_mem: exclude totalreserve_pages from available memory

totalreserve_pages is the reserve of pages that are not available to
userspace allocations. totalreserve_pages includes lowmem_reserve which
is higher on boards with highmem zones. Exclude totalreserve_pages
instead of min_free from available memory.

BUG=chromium:890335
TEST=run platform_LowMemoryTest

Change-Id: I5568a5d438de334b22c62aa54cd82e90c868392e
Signed-off-by: Kuo-Hsin Yang <vovoy@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/1260526
Commit-Ready: ChromeOS CL Exonerator Bot <chromiumos-cl-exonerator@appspot.gserviceaccount.com>
Tested-by: Vovo Yang <vovoy@chromium.org>
Reviewed-by: Sonny Rao <sonnyrao@chromium.org>
(cherry picked from commit 6cf6c12eaec831a8ea45197f161c1b6746cf00ba)
Reviewed-on: https://chromium-review.googlesource.com/1485627
Reviewed-by: Yu Zhao <yuzhao@chromium.org>