include/linux/low-mem-notify.h
@@ -17,6 +17,7 @@ extern const struct file_operations low_mem_notify_fops;
 extern bool low_mem_margin_enabled;
 extern unsigned int low_mem_ram_vs_swap_weight;
 extern struct ratelimit_state low_mem_logging_ratelimit;
+extern int extra_free_kbytes;
 
 #ifdef CONFIG_SYSFS
 extern void low_mem_threshold_notify(void);
@@ -56,17 +57,19 @@ static inline unsigned long get_available_anon_mem(void)
  */
 static inline unsigned long get_available_mem_adj(void)
 {
-	/* min_free_kbytes is reserved for emergency allocation like when
-	 * PF_MEMALLOC is set. In general it's not usable in normal page
-	 * allocation process.
-	 */
-	unsigned long min_free_pages = min_free_kbytes >> (PAGE_SHIFT - 10);
 	/* free_mem is completely unallocated; clean file-backed memory
 	 * (file_mem - dirty_mem) is easy to reclaim, except for the last
-	 * min_filelist_kbytes.
+	 * min_filelist_kbytes. totalreserve_pages is the reserve of pages that
+	 * are not available to user space. totalreserve_pages is high watermark
+	 * + lowmem_reserve and extra_free_kbytes raises the high watermark.
+	 * Nullify the effect of extra_free_kbytes by excluding it from the
+	 * reserved pages.
 	 */
-	unsigned long free_mem =
-			global_page_state(NR_FREE_PAGES) - min_free_pages;
+	unsigned long raw_free_mem = global_page_state(NR_FREE_PAGES);
+	unsigned long reserve_pages = totalreserve_pages -
+			(READ_ONCE(extra_free_kbytes) >> (PAGE_SHIFT - 10));
+	unsigned long free_mem = (raw_free_mem > reserve_pages) ?
+			raw_free_mem - reserve_pages : 0;
 	unsigned long available_mem = free_mem +
 			get_available_file_mem();
 	unsigned long swappable_pages = min_t(unsigned long,
